# model

./: pyproject.toml  test.csv
model/: detail.py  ground.py  leg.py  platform.py  rpr.py
tests/: L.py
utils/: target.py
