[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Nebolsin Vasili <nebolsinvasili@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
pandas = "^2.2.3"
matplotlib = "^3.9.3"

[tool.poetry.group.test.dependencies]
loguru = "^0.7.3"
ruff = "^0.8.2"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
